Metadata/objects/Tax_Integration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvaTax_Account_Number__c</fullName>
        <label>AvaTax Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaTax_Adapter__c</fullName>
        <label>AvaTax Adapter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaTax_Client_Name__c</fullName>
        <label>AvaTax Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaTax_Company_Code__c</fullName>
        <label>AvaTax Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaTax_Environment_Name__c</fullName>
        <label>AvaTax Environment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaTax_License_Key__c</fullName>
        <label>AvaTax License Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaTax_Organization__c</fullName>
        <label>AvaTax Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Engine__c</fullName>
        <label>Tax Engine</label>
        <picklist>
            <picklistValues>
                <fullName>Avalara AvaTax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SpeedTax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Mode</label>
        <type>Checkbox</type>
    </fields>
    <label>Tax Integration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>